--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,13 @@
     "default_title": "Link Nuker",
     "default_icon": "./icons/icon16.png",
     "default_popup": "extension-ui.html"
-  }
+  },
+  "web_accessible_resources": ["boom.gif", "explosion.mp3"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "css": ["popup.css"],
+      "js": ["jquery-3.3.1.min.js", "script.js"]
+    }
+  ]
 }
